<resources>
    <string name="app_name">AquaDroid</string>
    <string name="pref_notification_message_value">Hey… Lets drink some water…</string>
    <string name="add_info_text">Please provide some information to customize the experience for you…!!</string>
    <string name="str_continue">Continue</string>
    <string name="enter_your_name_hint">Enter your name</string>
    <string name="age_hint">Enter your age</string>
    <string name="weight_hint">Enter your weight in Kg</string>
    <string name="custom_intake_hint">Enter your custom intake target in ml</string>
    <string name="workout_hint">Your daily work out time in min/day</string>
    <string name="wakeup_hint">Your wake up time</string>
    <string name="sleeping_hint">Your Sleep time</string>
    <string name="tagline_text">Lets keep you hydrated…</string>
    <string name="get_started">Get Started</string>
    <string name="edit_info_text">Edit Your Info</string>
    <string name="update">Update</string>
    <string name="notif_setting_header">Notification Settings</string>
    <string name="notif_messsage_hint">Notification Message</string>
    <string name="notif_tone_hint">Notification Tone</string>
    <string name="notif_freq_hint">Notification Frequency</string>
    <string name="walkthrough_text_one">Water is 60 percent of your body weight. Your body depends on water to
        survive.
    </string>
    <string name="walkthough_text_two">Lack of water can lead to dehydration. Even mild dehydration can drain you and
        make you tired.
    </string>
    <string name="walkthrough_text_three">Every cell, tissue and organ in your body needs water to work properly.
    </string>
</resources>
