<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:background="@color/colorSecondaryDark"
        android:id="@+id/bottomSheetParent"
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView3">

    <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:textColor="@color/colorWhite"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/edit_info_text" />

    <Button
            android:id="@+id/btnUpdate"
            style="@android:style/Widget.Material.Button.Borderless"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:drawableEnd="@drawable/ic_checked"
            android:text="@string/update"
            android:textColor="@color/colorWhite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/update" />

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:theme="@style/TextInputLayoutAppearance"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:layout_marginEnd="16dp"
            app:layout_constraintHorizontal_bias="0.0"
            android:id="@+id/etWeight" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView7">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@null"
                android:hint="@string/weight_hint"
                android:inputType="numberSigned"
                android:maxLength="3"
                android:paddingStart="10dp"
                android:paddingBottom="10dp" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:theme="@style/TextInputLayoutAppearance"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/etWeight"
            android:id="@+id/etWorkTime">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@null"
                android:hint="@string/workout_hint"
                android:inputType="numberSigned"
                android:maxLength="3"
                android:paddingStart="10dp"
                android:paddingBottom="10dp" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:theme="@style/TextInputLayoutAppearance"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/etWorkTime"
            android:id="@+id/etWakeUpTime" app:layout_constraintEnd_toStartOf="@+id/etSleepTime"
            android:layout_marginEnd="8dp">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@null"
                android:clickable="true"
                android:focusable="false"
                android:hint="@string/wakeup_hint"
                android:inputType="numberSigned"
                android:paddingStart="10dp"
                android:paddingBottom="10dp" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:theme="@style/TextInputLayoutAppearance"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/etWorkTime"
            android:id="@+id/etSleepTime" app:layout_constraintStart_toEndOf="@+id/etWakeUpTime"
            android:layout_marginStart="8dp">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@null"
                android:clickable="true"
                android:focusable="false"
                android:hint="@string/wakeup_hint"
                android:inputType="numberSigned"
                android:paddingStart="10dp"
                android:paddingBottom="10dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
            android:id="@+id/totalIntakePercentage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/notif_setting_header"
            android:textColor="@color/colorWhite"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etSleepTime"
            tools:text="@string/notif_setting_header" />
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:theme="@style/TextInputLayoutAppearance"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/totalIntakePercentage"
            android:id="@+id/etNotificationText">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@null"
                android:hint="@string/notif_messsage_hint"
                android:inputType="text"
                android:paddingStart="10dp"
                android:paddingBottom="10dp" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:theme="@style/TextInputLayoutAppearance"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/etNotificationText"
            android:id="@+id/etRingtone">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@null"
                android:clickable="true"
                android:focusable="false"
                android:hint="@string/notif_tone_hint"
                android:inputType="text"
                android:paddingStart="10dp"
                android:paddingBottom="10dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:textColor="@color/colorWhite"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etRingtone"
            tools:text="@string/notif_freq_hint" />
    <co.ceryle.radiorealbutton.RadioRealButtonGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:rrbg_animateDrawables_enter="overshoot"
            app:rrbg_animateTexts_enter="overshoot"
            app:rrbg_dividerColor="@color/colorBlack"
            app:rrbg_dividerSize="1dp"
            app:rrbg_radius="6dp"
            app:rrbg_selectorColor="@color/colorSecondaryLighter"
            app:rrbg_selectorSize="6dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:id="@+id/radioNotificItervel"
            app:layout_constraintTop_toBottomOf="@+id/textView2" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp">

        <co.ceryle.radiorealbutton.RadioRealButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:rrb_drawable="@drawable/ic_30_minutes"
                app:rrb_drawableHeight="38dp"
                app:rrb_drawablePadding="8dp"
                app:rrb_drawableGravity="left"
                app:rrb_drawableWidth="30dp"
                app:rrb_ripple="true"
                app:rrb_rippleColor="@color/colorBlack"
                app:rrb_text="30 Mins"
                app:rrb_textColor="@color/colorBlack"/>

        <co.ceryle.radiorealbutton.RadioRealButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:rrb_drawable="@drawable/ic_45_minutes"
                app:rrb_drawableGravity="left"
                app:rrb_drawableHeight="30dp"
                app:rrb_drawablePadding="8dp"
                app:rrb_drawableWidth="30dp"
                app:rrb_ripple="true"
                app:rrb_rippleColor="@color/colorBlack"
                app:rrb_text="45 Mins"
                app:rrb_textColor="@color/colorBlack" />

        <co.ceryle.radiorealbutton.RadioRealButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:rrb_drawable="@drawable/ic_60_minutes"
                app:rrb_drawableGravity="left"
                app:rrb_drawableHeight="30dp"
                app:rrb_drawablePadding="8dp"
                app:rrb_drawableWidth="30dp"
                app:rrb_ripple="true"
                app:rrb_rippleColor="@color/colorBlack"
                app:rrb_text="60 Mins"
                app:rrb_textColor="@color/colorBlack"/>
    </co.ceryle.radiorealbutton.RadioRealButtonGroup>

</androidx.constraintlayout.widget.ConstraintLayout>